# soundcloud-player

./: .gitignore  README.md  pyproject.toml  setup.cfg
configs/: albums_example.yml
src/soundcloud_player/: background.py  config_manager.py  download.py  main.py  organise.py  player.py  soundcloud_client.py  visualisation.py
